# pyside6-boilerplate

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .yamllint  README.rst  app.pro  app.spec  pyproject.toml  pyuic.json
.devcontainer/: Dockerfile  devcontainer.json  post_create.sh
.github/: dependabot.yml
.github/workflows/: dependencies.yml  test.yml
docs/: conf.py
resources/: resources.qrc
resources/translations/: ca_ES.ts  en_US.ts  es_ES.ts  fr_FR.ts  it_IT.ts
src/app/: MainWindow.py  __init__.py  __main__.py
src/app/_ui/: __init__.py  _autogen.py
src/app/widgets/: AboutWidget.py  __init__.py
tests/: __init__.py  test_main_window.py  test_version.py
